tests/errors/wrong-args-forward-decl-in-func.au
func a() {
    b(1,2,3);
}

func b() {}